Fix weird chat from names overflowing

--- a/src/app/referrals-beta/referrals-beta.component.scss
+++ b/src/app/referrals-beta/referrals-beta.component.scss
@@ -32,7 +32,7 @@
   }
 
   .c-chat {
-    width: 350px;
+    width: 375px;
     overflow-x: hidden;
     padding: 0 4px;
   }
@@ -40,7 +40,7 @@
   .vert {
     width: 1px;
     background: rgba(white, 0.2);
-    height: 20px;
+    height: 28px;
     transform: translateY(10px);
   }
 
@@ -67,13 +67,12 @@
     }
   }
 
-  mat-card.clinic-chat {
-    margin: 0 auto;
-    width: 85%;
+  .clinic-chat {
     position: sticky;
-    top: 24px;
+    top: 0px;
     padding: 0;
     overflow: hidden;
+    border-bottom: 1px solid rgba(grey, 0.2);
     
     > div {
       overflow: hidden;
@@ -125,13 +124,10 @@
   }
 
   .chat {
-    position: sticky;
-    top: 78px;
     box-sizing: border-box;
     max-height: 500px;
     height: 500px;
     padding: 0;
-    transform: translateY(-10px);
 
     .ms {
       overflow-y: auto;
